fix latest mongo, nginx base docker image does not work

--- a/deployment/docker/glancenginxhttps/nginx.conf
+++ b/deployment/docker/glancenginxhttps/nginx.conf
@@ -33,11 +33,12 @@ server {
 	#for HTTP
 	#listen 80;
 	#begin for HTTPS
-	listen 		443;
-	ssl 			on;
+	listen              443 ssl;
 	ssl_password_file 		/etc/nginx/tls/glance.pass;
 	ssl_certificate     	/etc/nginx/tls/glance.cert.pem;
 	ssl_certificate_key 	/etc/nginx/tls/glance.key.pem;
+	ssl_protocols           TLSv1 TLSv1.1 TLSv1.2;
+
 	#end for HTTPS
 	client_max_body_size 100M;
 	proxy_read_timeout 86400s;
