--- a/deployment/docker/glancenginx/nginx.conf
+++ b/deployment/docker/glancenginx/nginx.conf
@@ -55,7 +55,7 @@ server {
 		proxy_set_header Upgrade $http_upgrade;
 		proxy_set_header Connection "upgrade";
 		proxy_http_version 1.1;
-		#proxy_set_header X-Forwarded-Proto https;
+		#proxy_set_header X-Forwarded-Proto https;gs3
 		proxy_set_header X-Real-IP $remote_addr;
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 		proxy_set_header Host $host;
@@ -82,87 +82,6 @@ server {
 		proxy_set_header Host $host;
 		proxy_pass http://gs2/api/v1/util/logfile;
 	}
-	location /api/v1/util/logfile3 {
-		proxy_set_header Upgrade $http_upgrade;
-		proxy_set_header Connection "upgrade";
-		proxy_http_version 1.1;
-		#proxy_set_header X-Forwarded-Proto https;
-		proxy_set_header X-Real-IP $remote_addr;
-		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-		proxy_set_header Host $host;
-		proxy_pass http://gs3/api/v1/util/logfile;
-	}
-	location /api/v1/util/logfile4 {
-		proxy_set_header Upgrade $http_upgrade;
-		proxy_set_header Connection "upgrade";
-		proxy_http_version 1.1;
-		#proxy_set_header X-Forwarded-Proto https;
-		proxy_set_header X-Real-IP $remote_addr;
-		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-		proxy_set_header Host $host;
-		proxy_pass http://gs4/api/v1/util/logfile;
-	}
-	location /api/v1/util/logfile5 {
-		proxy_set_header Upgrade $http_upgrade;
-		proxy_set_header Connection "upgrade";
-		proxy_http_version 1.1;
-		#proxy_set_header X-Forwarded-Proto https;
-		proxy_set_header X-Real-IP $remote_addr;
-		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-		proxy_set_header Host $host;
-		proxy_pass http://gs5/api/v1/util/logfile;
-	}
-	location /api/v1/util/logfile6 {
-		proxy_set_header Upgrade $http_upgrade;
-		proxy_set_header Connection "upgrade";
-		proxy_http_version 1.1;
-		#proxy_set_header X-Forwarded-Proto https;
-		proxy_set_header X-Real-IP $remote_addr;
-		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-		proxy_set_header Host $host;
-		proxy_pass http://gs6/api/v1/util/logfile;
-	}
-	location /api/v1/util/logfile7 {
-		proxy_set_header Upgrade $http_upgrade;
-		proxy_set_header Connection "upgrade";
-		proxy_http_version 1.1;
-		#proxy_set_header X-Forwarded-Proto https;
-		proxy_set_header X-Real-IP $remote_addr;
-		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-		proxy_set_header Host $host;
-		proxy_pass http://gs7/api/v1/util/logfile;
-	}
-	location /api/v1/util/logfile8 {
-		proxy_set_header Upgrade $http_upgrade;
-		proxy_set_header Connection "upgrade";
-		proxy_http_version 1.1;
-		#proxy_set_header X-Forwarded-Proto https;
-		proxy_set_header X-Real-IP $remote_addr;
-		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-		proxy_set_header Host $host;
-		proxy_pass http://gs8/api/v1/util/logfile;
-	}
-	location /api/v1/util/logfile9 {
-		proxy_set_header Upgrade $http_upgrade;
-		proxy_set_header Connection "upgrade";
-		proxy_http_version 1.1;
-		#proxy_set_header X-Forwarded-Proto https;
-		proxy_set_header X-Real-IP $remote_addr;
-		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-		proxy_set_header Host $host;
-		proxy_pass http://gs9/api/v1/util/logfile;
-	}
-	location /api/v1/util/logfile10 {
-		proxy_set_header Upgrade $http_upgrade;
-		proxy_set_header Connection "upgrade";
-		proxy_http_version 1.1;
-		#proxy_set_header X-Forwarded-Proto https;
-		proxy_set_header X-Real-IP $remote_addr;
-		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-		proxy_set_header Host $host;
-		proxy_pass http://gs10/api/v1/util/logfile;
-	}
-
 	location /api {
 		proxy_set_header Upgrade $http_upgrade;
 		proxy_set_header Connection "upgrade";
